# django-project

./: .gitignore  Dockerfile  Makefile  Pipfile  docker-compose.yml  pyproject.toml  requirements.txt
etc/: nginx.example.conf  supervisor.example.conf  uwsgi.example.ini
etc/ssl/vadim.ovh/: cert1.pem  cert2.pem  fullchain1.pem  fullchain2.pem  privkey1.pem  privkey2.pem
src/apps/comments/migrations/: 0001_initial.py
src/apps/content/: admin.py  models.py  urls.py  views.py
src/apps/content/migrations/: 0001_initial.py
src/apps/content/templates/content/: content_list.html
src/apps/event/: __init__.py  admin.py  apps.py  models.py
src/apps/event/views/: __init__.py  class.py  datatable.py
src/apps/example/: admin.py  models.py  signals.py  tasks.py  urls.py  views.py
src/apps/example/migrations/: 0001_initial.py
src/apps/example/views/: class.py
src/apps/homepage/: __init__.py  admin.py  apps.py  models.py  redmine.py  signals.py  tasks.py  urls.py  views.py
src/apps/homepage/migrations/: 0001_initial.py
src/apps/homepage/templatetags/: homepage_tags.py
src/apps/share/: models.py  tasks.py  views.py
src/apps/share/migrations/: 0001_initial.py
src/apps/tube/: __init__.py  apps.py  models.py  tasks.py  urls.py  views.py
src/managemens/commands/: project_console.py
src/project/: __init__.py  __settings_example.py  admin.py  asgi.py  celery.py  middleware.py  settings.py  tasks.py  urls.py  views.py
src/project/management/commands/: compress.py  import_csv.py  project_console.py  test_redmine.py
src/project/settings/: additional.py  base.py  database.py  local.py.example  logging.py  regional.py  templates.py  vcms.py
src/project/settings/local/: local.py.example  logging.py.example
src/project/static/: main.css
src/project/templates/: 404.html  base.html  index.html  local.html
src/project/templatetags/: vcms_tags.py
(+7 files in other folders)
