[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["Vadim Kravciuk"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-constance = "^2.9.1"
django-ckeditor = "^6.7.1"
django-sitetree = "^1.17.3"
django-select2 = "^8.1.1"
django-taggit = "^3.1.0"
django-taggit-autosuggest = "^0.4.1"
django-treebeard = "^4.6.0"
Pillow = "^9.4.0"
Pygments = "^2.14.0"
Markdown = "^3.4.1"
django-sekizai = "^4.0.0"
django-crispy-forms = "^1.14.0"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-picklefield = "^3.1"
hashids = "^1.3.1"
pycryptodome = "^3.16.0"
django-imagekit = "^4.1.0"
requests = "^2.28.2"
lxml = "^4.9.2"
django-widget-tweaks = "^1.4.12"
uWSGI = "^2.0.21"
geoip2 = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
rich = "^13.3.2"
colorlog = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
