[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Vadim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-constance = "^4.1.2"
django-ckeditor = "^6.7.1"
django-sitetree = "^1.18.0"
django-select2 = "^8.2.1"
django-taggit = "^6.1.0"
django-treebeard = "^4.7.1"
django-sekizai = "^4.1.0"
django-crispy-forms = "^2.3"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-tables2 = "^2.7.0"
django-widget-tweaks = "^1.5.0"
pillow = "^11.0.0"
pygments = "^2.18.0"
requests = "^2.32.3"
hashids = "^1.3.1"
uwsgi = "^2.0.27"
geoip2 = "^4.8.0"
daphne = "^4.1.2"
channels = "^4.1.0"
django-sendfile2 = "^0.7.1"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
